k8s/manifests/application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-task-list-devops
  namespace: task-list-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: paulofabianoo/task-list-frontend
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-task-list-devops
  namespace: task-list-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: paulofabianoo/task-list-backend
          ports:
            - containerPort: 8080
