k8s/manifests/application/service.yaml
# ---- Frontend ---- #
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: task-list-devops
spec:
  selector:
    app: web
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP 
---
# ---- Backend ---- #
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: task-list-devops
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
